--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: bbrassar <bbrassar@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/15 01:39:23 by bbrassar          #+#    #+#              #
-#    Updated: 2021/12/21 07:47:37 by bbrassar         ###   ########.fr        #
+#    Updated: 2021/12/21 09:03:52 by bbrassar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,6 +14,10 @@ NAME				= philo
 CC					= cc
 CFLAGS				= -Wall -Werror -Wextra -c -MMD -MP -I.
 LDLIBS				= -lpthread
+
+ifdef DEBUG
+CFLAGS				+= -g$(DEBUG)
+endif
 
 DIR_SRC				= src
 DIR_OBJ				= obj
