Changed debug parameters

--- a/philo/.vscode/launch.json
+++ b/philo/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/philo",
-			"args": ["14000", "100", "20", "20", "5"],
+			"args": ["4", "400", "200", "200"],
 			"stopAtEntry": true,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
